--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -835,7 +835,7 @@ How test will be performed:
         \item Aggregate all recorded $t_{\text{payoutDelay}}$ values.
         \item Determine the percentage of payout requests where $t_{\text{payoutDelay}} < 7$ days.
         \item Ensure that 90\% or more of the payout requests meet the criterion $t_{\text{payoutDelay}} < 7$ days.
-        \item Verify that 100\% of the payout requests are processed within $t_{\text{payoutDelay}} \leq 7 + 0$ days (since the fit criterion states "within 7 business days" and "within 48 hours in all cases" is not applicable here).
+        \item Verify that 100\% of the payout requests are processed within $t_{\text{payoutDelay}} \leq 7$ days.
     \end{enumerate}
     
 \end{enumerate}
